--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 
-#Recomendaciones
+Recomendaciones
 - Utilizar npm i para descargar dependencias
 - Tener en el celular o un emulador la aplicación Expo Go, esta nos ayudará a visualizar el flujo
     y se encuentra en Play Store
